--- a/package.json
+++ b/package.json
@@ -140,7 +140,7 @@
     ],
     "graphics": [
       {
-        "file": "team2.html",
+        "file": "team3-4.html",
         "width": 1590,
         "height": 660
       },
